# persistent-cache-cpp

./: CMakeLists.txt
data/: libpersistent-cache-cpp.pc.in
debian/: changelog  control  persistent-cache-cpp-dev.install  persistent-cache-cpp-doc.install  rules
debian/tests/: control  test-examples
doc/: main_page.dox.in
examples/: CMakeLists.txt  person_cache.cpp  string_cache.cpp
include/core/: CMakeLists.txt  persistent_cache_stats.h  persistent_string_cache.h
include/core/internal/: persistent_string_cache_stats.h
src/core/: CMakeLists.txt  persistent_cache_stats.cpp
tests/: CMakeLists.txt
tests/copyright/: check_copyright.sh
tests/core/: CMakeLists.txt
tests/core/internal/persistent_string_cache_impl/: persistent_string_cache_impl_test.cpp
tests/core/persistent_cache/: persistent_cache_test.cpp
tests/core/persistent_string_cache/: persistent_string_cache_test.cpp  speed_test.cpp
